
12. Fix: removed "sourceFiles:" debugging statement from breakout prompt.

CHANGES SINCE 2.2.2

13. New: parameterized (generic) types can now be extended as types and subtypes or passed as parameters to user subprograms

14. New: parameterized (generic) types can now be defined as types and subtypes.  These types and subtypes can be passed as parameters to user subprograms.  Types extending resource types must be limited.

15. Change: record declarations may end with "end <type-name>" instead of "end record", but only if pragma ada_95 is not used. [tests needed]

16. New: function and procedure forward specifications. [docs needed].

17. Fix: multiple library paths (-L option) now work correctly.

18. Fix: trying to run a "with separate" file now produces an appropriate error message.

19. Fix: -p option now showing functions, procedures, blocks correctly.

20: New: -p option shows number of comments and comments/block statistics. (may be fooled by -- in strings).

21. New: -p option shows number of branches and branches/block statistics.

22. Change: As a security precaution, the trace command, and pragma inspect, inspection_peek and inspection_point are no longer allowed in testing or maintenance phases unless at the breakout prompt.  Tracing can be invoked by the command line options.

23. Change: As a security precaution, JSON error message have values do not appear when in maintenance mode.

24. New: --without-pcre configuration option will disable PCRE library
support.

25. Change: a script will not run for the same permission issues as an include file.

26. Fix: script file name fix if the error messages where it was appending file suffixes.

27. New: constant specifications (i.e. forward constants). [docs needed] [tests needed]

28. Fix: tests for now ignore deleted identifiers within the symbol table.  Before, only deleted identifiers on the top of the symbol table were ignored.

29. Change: strings.image handles enumerated items.
